# logger4dec

./: .gitignore  README.md  pyproject.toml
src/logger/: __init__.py
src/logger4dec/: __init__.pyi
