[project]
name = "logger4dec"
version = "0.1.0"
description = "A lightweight Python library that provides a decorator-based logger for colored terminal output. Customize foreground colors, background colors, and text styles using ANSI escape sequences."
authors = [
    {name = "ifuckingjoke (13)"}
]
license = "GPL-v3.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
